--- a/Projeto/Sobre Nós/SobreNós.html
+++ b/Projeto/Sobre Nós/SobreNós.html
@@ -5,44 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Nós</title>
     <link rel="stylesheet" href="SobreNós.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header>
-      <h1>EletroCenter</h1>
+      <div class="header-content">
+          <a href="index.html"> <!-- Link para a página inicial -->
+              <img src="./Imagem/logo2.jpg" alt="logo" width="500px" height="200px"/>
+          </a>
+      </div>
       <nav>
-        <ul>
-          <li><a href="#sobre">Sobre Nós</a></li>
-          <li><a href="#historia">Nossa História</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
+          <a href="#">Categorias</a>
+          <a href="#">Novidades</a>
+          <a href="#">Ofertas</a>
+          <a href="#">Melhores Vendas</a>
+          <a href="#">Promoções</a>
+          <a href="#">Acessórios</a>
+          <a href="#">Sobre Nós</a>
+          <a href="#">Ajuda</a>
+          <a href="#">Contato</a>
       </nav>
-    </header>
+  </header>
 
     <main>
-      <section id="sobre">
-        <h2>Quem Somos</h2>
-        <p>
-          A EletroCenter é dedicada a oferecer as melhores soluções em
-          eletrônicos. Nossa missão é transformar a experiência do cliente.
-        </p>
-        <div class="integrantes">
-          <img
-            src="/Imagem/deivide.jpg"
-            alt="Deivide"
-            width="200"
-            height="200"
-          />
-          <img src="/Imagem/pedro.jpg" alt="Pedro" width="200" height="200" />
-          <img src="/Imagem/lucas.png" alt="Lucas" width="200" height="200" />
-          <img
-            src="/Imagem/fabricio.jpg"
-            alt="Fabricio"
-            width="200"
-            height="200"
-          />
-          <img src="/Imagem/enzo.PNG" alt="Enzo" width="200" height="200" />
-        </div>
-      </section>
+        <section id="sobre">
+            <h2>Quem Somos</h2>
+            <p>Conheça os integrantes da nossa equipe!</p>
+            <div class="integrantes">
+                <div>
+                    <img src="./Imagem/deivide.jpg"  alt="deivide" width="200" height="200">
+                    <p>Deivide</p>
+                </div>
+                <div>
+                    <img src="./Imagem/pedro.jpg"  alt="pedro" width="200" height="200">
+                    <p>Pedro</p>
+                </div>
+                <div>
+                    <img src="./Imagem/lucas.png" alt="Lucas" width="200" height="200">
+                    <p>Lucas</p>
+                </div>
+                <div>
+                    <img src="./Imagem/fabricio.jpg" alt="Fabrício" width="200" height="200">
+                    <p>Fabrício</p>
+                </div>
+                <div>
+                    <img src="./Imagem/enzo.PNG" alt="Enzo" width="200" height="200">
+                    <p>Enzo</p>
+                </div>
+            </div>
+        </section>
+        
 
       <section id="servicos">
         <h2>O que Oferecemos</h2>
