--- a/assets/Avaliação/Avaliação.html
+++ b/assets/Avaliação/Avaliação.html
@@ -14,21 +14,42 @@
   <body>
     <header>
       <div class="header-content">
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Homepage/homepage.html">
-          <img src="/Avaliação/Logo2.jpg" alt="Logo" />
+        <a href="/Homepage/homepage.html">
+          <img src="Logo2.jpg" alt="Logo" class="Logo" />
         </a>
-        <input class="search-input" type="text" placeholder="Pesquisar..." aria-label="Pesquisar"/>
+        <input
+          class="search-input"
+          type="text"
+          placeholder="Pesquisar..."
+          aria-label="Pesquisar"
+        />
         <button class="search-button" type="submit">Buscar</button>
-        <div class="login-icon" title="Login"></div>
-        <div id="cart-icon" class="cart-icon">
+        <div class="icon-container">
+          <div
+            class="login-icon"
+            title="Login"
+            aria-label="Login"
+            role="button"
+            data-tooltip="Login"
+          ></div>
+          <div
+            id="cart-icon"
+            class="cart-icon"
+            title="Carrinho"
+            aria-label="Carrinho"
+            role="button"
+            data-tooltip="Carrinho"
+          ></div>
         </div>
       </div>
       <nav>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Produtos</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Promoção</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Parceiros/Parceiros.html">Parceiros</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Suporte/Suporte.html">Suporte</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Sobre%20N%C3%B3s/SobreN%C3%B3s.html">Sobre Nós</a>
+        <a href="http://127.0.0.1:5500/Produtos/Produtos.html">Produtos</a>
+        <a href="http://127.0.0.1:5500/Produtos/Produtos.html">Promoção</a>
+        <a href="http://127.0.0.1:5500/Parceiros/Parceiros.html">Parceiros</a>
+        <a href="http://127.0.0.1:5500/Suporte/Suporte.html">Suporte</a>
+        <a href="http://127.0.0.1:5500/Sobre%20N%C3%B3s/SobreN%C3%B3s.html"
+          >Sobre Nós</a
+        >
     </nav>
     </header>
 
