--- a/assets/Suporte/Suporte.html
+++ b/assets/Suporte/Suporte.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <div class="header-content">
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Homepage/homepage.html">
+        <a href="http://127.0.0.1:5500/Homepage/homepage.html">
           <img src="./Logo2.jpg" alt="Logo" class="Logo" />
         </a>
         <div class="icon-container">
@@ -50,12 +50,14 @@
         </div>
       </div>
       <nav>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Produtos</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Promoção</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Parceiros/Parceiros.html">Parceiros</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Suporte/Suporte.html">Suporte</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Sobre%20N%C3%B3s/SobreN%C3%B3s.html">Sobre Nós</a>
-    </nav>
+        <a href="http://127.0.0.1:5500/produtos/produtos.html">Produtos</a>
+        <a href="http://127.0.0.1:5500/produtos/produtos.html">Promoção</a>
+        <a href="http://127.0.0.1:5500/Parceiros/Parceiros.html">Parceiros</a>
+        <a href="http://127.0.0.1:5500/Suporte/Suporte.html">Suporte</a>
+        <a href="http://127.0.0.1:5500/Sobre%20N%C3%B3s/SobreN%C3%B3s.html"
+          >Sobre Nós</a
+        >
+      </nav>
     </header>
     <main class="container">
       <h1>Entre em contato conosco</h1>
