--- a/assets/Pagamentos/Pagamentos.html
+++ b/assets/Pagamentos/Pagamentos.html
@@ -1,122 +1,168 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="Pagamentos.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Pagamentos.css" />
     <title>Página de Pagamentos</title>
+
     <script>
-        function toggleFaq(faqItem) {
-            const answer = faqItem.querySelector("p");
-            answer.style.display = answer.style.display === "none" ? "block" : "none";
-        }
+      // Função para alternar a visibilidade das respostas da FAQ
+      function toggleFaq(faqItem) {
+        const answer = faqItem.querySelector("p");
+        const expanded =
+          faqItem.querySelector("h3").getAttribute("aria-expanded") === "true";
 
-        document.addEventListener("DOMContentLoaded", function() {
-            const form = document.getElementById("payment-form");
+        faqItem.querySelector("h3").setAttribute("aria-expanded", !expanded);
 
-            form.addEventListener("submit", function(event) {
-                event.preventDefault(); // Impede o envio padrão do formulário
+        answer.style.display = expanded ? "none" : "block";
+      }
 
-                // Simula o processo de pagamento
-                const paymentSuccess = simulatePayment();
+      document.addEventListener("DOMContentLoaded", function () {
+        const form = document.getElementById("payment-form");
 
-                if (paymentSuccess) {
-                    displayPaymentMessage("Pagamento concluído com sucesso! Um e-mail de confirmação foi enviado.");
-                } else {
-                    displayPaymentMessage("O pagamento não foi concluído. Por favor, tente novamente.");
-                }
-            });
+        form.addEventListener("submit", function (event) {
+          event.preventDefault(); // Impede o envio padrão do formulário
+
+          const isValid = validateForm();
+          if (!isValid) return;
+
+          // Simula o processo de pagamento
+          const paymentSuccess = simulatePayment();
+
+          if (paymentSuccess) {
+            displayPaymentMessage(
+              "Pagamento concluído com sucesso! Um e-mail de confirmação foi enviado."
+            );
+          } else {
+            displayPaymentMessage(
+              "O pagamento não foi concluído. Por favor, tente novamente."
+            );
+          }
         });
+      });
 
-        function simulatePayment() {
-            return true; // Simula que o pagamento foi bem-sucedido
+      // Função para validar o formulário
+      function validateForm() {
+        const cardNumber = document.getElementById("card-number").value;
+        const expiryDate = document.getElementById("expiry-date").value;
+        const cvv = document.getElementById("cvv").value;
+
+        // Exemplo de validação simples de números de cartão
+        if (!/^\d{16}$/.test(cardNumber)) {
+          alert("Número do cartão inválido.");
+          return false;
+        }
+        // Validar data de validade (MM/AA)
+        if (!/^\d{2}\/\d{2}$/.test(expiryDate)) {
+          alert("Data de validade inválida.");
+          return false;
+        }
+        // Validar código de segurança (CVV)
+        if (!/^\d{3}$/.test(cvv)) {
+          alert("Código de segurança (CVV) inválido.");
+          return false;
         }
 
-        function displayPaymentMessage(message) {
-            const messageContainer = document.createElement("div");
-            messageContainer.className = "payment-message";
-            messageContainer.textContent = message;
+        return true;
+      }
 
-            document.body.appendChild(messageContainer);
+      // Função para simular o pagamento
+      function simulatePayment() {
+        return true; // Simula que o pagamento foi bem-sucedido
+      }
 
-            // Remover a mensagem após 5 segundos
-            setTimeout(() => {
-                messageContainer.remove();
-            }, 5000);
-        }
+      // Função para exibir a mensagem de pagamento
+      function displayPaymentMessage(message) {
+        const messageContainer = document.createElement("div");
+        messageContainer.className = "payment-message";
+        messageContainer.textContent = message;
+
+        document.body.appendChild(messageContainer);
+
+        // Remover a mensagem após 5 segundos ou com o clique do usuário
+        setTimeout(() => {
+          messageContainer.remove();
+        }, 5000);
+
+        // Adicionar um botão de fechar
+        const closeButton = document.createElement("button");
+        closeButton.textContent = "Fechar";
+        closeButton.onclick = () => messageContainer.remove();
+        messageContainer.appendChild(closeButton);
+      }
     </script>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <div class="header-content">
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Homepage/homepage.html" aria-label="Voltar à página inicial">
-                <img src="Logo2.jpg" alt="Logo da Loja de Eletrônicos">
-            </a>
-        </div>
-        <nav>
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Produtos</a>
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Promoção</a>
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Parceiros/Parceiros.html">Parceiros</a>
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Suporte/Suporte.html">Suporte</a>
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Sobre%20N%C3%B3s/SobreN%C3%B3s.html">Sobre Nós</a>
-        </nav>
+      <div class="header-content">
+        <a href="/Homepage/homepage.html" aria-label="Voltar à página inicial">
+          <img src="Logo2.jpg" alt="Logo" class="Logo" />
+        </a>
+      </div>
+      <nav>
+        <a href="http://127.0.0.1:5500/Produtos/Produtos.html">Produtos</a>
+        <a href="http://127.0.0.1:5500/Produtos/Produtos.html">Promoção</a>
+        <a href="http://127.0.0.1:5500/Parceiros/Parceiros.html">Parceiros</a>
+        <a href="http://127.0.0.1:5500/Suporte/Suporte.html">Suporte</a>
+        <a href="http://127.0.0.1:5500/Sobre%20N%C3%B3s/SobreN%C3%B3s.html"
+          >Sobre Nós</a
+        >
+      </nav>
     </header>
 
     <div class="container">
-        <h2>Realizar Pagamento</h2>
-        <form id="payment-form" action="#" method="post">
-            <label for="card-number">Número do Cartão:</label>
-            <input type="text" id="card-number" name="card-number" required />
+      <h2>Realizar Pagamento</h2>
 
-            <label for="expiry-date">Data de Validade (MM/AA):</label>
-            <input type="text" id="expiry-date" name="expiry-date" required />
+      <form id="payment-form" action="#" method="post">
+        <label for="card-number">Número do Cartão:</label>
+        <input type="text" id="card-number" name="card-number" required />
 
-            <label for="cvv">Código de Segurança (CVV):</label>
-            <input type="text" id="cvv" name="cvv" required />
+        <label for="expiry-date">Data de Validade (MM/AA):</label>
+        <input type="text" id="expiry-date" name="expiry-date" required />
 
-            <label for="name-on-card">Nome no Cartão:</label>
-            <input type="text" id="name-on-card" name="name-on-card" required />
+        <label for="cvv">Código de Segurança (CVV):</label>
+        <input type="text" id="cvv" name="cvv" required />
 
-            <button type="submit">Pagar</button>
-        </form>
+        <label for="name-on-card">Nome no Cartão:</label>
+        <input type="text" id="name-on-card" name="name-on-card" required />
 
-        <div class="faq">
-            <h2>Perguntas Frequentes (FAQ)</h2>
+        <button type="submit">Pagar</button>
+      </form>
 
-            <div class="faq-item" onclick="toggleFaq(this)">
-                <h3>Quais métodos de pagamento são aceitos?</h3>
-                <p style="display: none;">Aceitamos cartões de crédito, débito e pagamentos via PayPal.</p>
-            </div>
+      <div class="faq">
+        <h2>Perguntas Frequentes (FAQ)</h2>
 
-            <div class="faq-item" onclick="toggleFaq(this)">
-                <h3>É seguro inserir meus dados de pagamento?</h3>
-                <p style="display: none;">Sim, utilizamos criptografia SSL para garantir a segurança dos seus dados.</p>
-            </div>
-
-            <div class="faq-item" onclick="toggleFaq(this)">
-                <h3>O que fazer se meu pagamento não for processado?</h3>
-                <p style="display: none;">Verifique seus dados de pagamento e tente novamente. Se o problema persistir, entre em contato com o suporte.</p>
-            </div>
+        <div class="faq-item" onclick="toggleFaq(this)">
+          <h3>Quais métodos de pagamento são aceitos?</h3>
+          <p style="display: none">
+            Aceitamos cartões de crédito, débito e pagamentos via PayPal.
+          </p>
         </div>
-    </div>
 
-    <style>
-        /* Estilos dinâmicos para a mensagem de pagamento */
-        .payment-message {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 15px;
-            background-color: #28a745; /* Verde para sucesso */
-            color: white;
-            border-radius: 5px;
-            z-index: 1000;
-            transition: opacity 0.5s ease;
-        }
-    </style>
-</body>
+        <div class="faq-item" onclick="toggleFaq(this)">
+          <h3>É seguro inserir meus dados de pagamento?</h3>
+          <p style="display: none">
+            Sim, utilizamos criptografia SSL para garantir a segurança dos seus
+            dados.
+          </p>
+        </div>
+
+        <div class="faq-item" onclick="toggleFaq(this)">
+          <h3>O que fazer se meu pagamento não for processado?</h3>
+          <p style="display: none">
+            Verifique seus dados de pagamento e tente novamente. Se o problema
+            persistir, entre em contato com o suporte.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
