--- a/assets/Perfil/Perfil.html
+++ b/assets/Perfil/Perfil.html
@@ -12,15 +12,15 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Homepage/homepage.html">
+            <a href="/Homepage/homepage.html">
                 <img src="logo2.jpg" alt="Logo" class="logo">
             </a>
             <nav>
-                <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Produtos</a>
-                <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Promoção</a>
-                <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Parceiros/Parceiros.html">Parceiros</a>
-                <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Suporte/Suporte.html">Suporte</a>
-                <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Sobre%20N%C3%B3s/SobreN%C3%B3s.html">Sobre Nós</a>
+                <a href="/produtos/produtos.html">Produtos</a>
+                <a href="/produtos/produtos.html">Promoção</a>
+                <a href="/Parceiros/Parceiros.html">Parceiros</a>
+                <a href="/Suporte/Suporte.html">Suporte</a>
+                <a href="/Sobre Nós/SobreNós.html">Sobre Nós</a>
             </nav>
         </div>
     </header>
