--- a/assets/Sobre Nós/SobreNós.html
+++ b/assets/Sobre Nós/SobreNós.html
@@ -12,21 +12,34 @@
   </head>
   <body>
     <header>
-      <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Homepage/homepage.html">
+      <a href="/Homepage/homepage.html">
           <img src="./Imagem/logo2.jpg" alt="Logo" class="logo" height="100"/>
       </a>
-      
-      
-      <div class="login-icon" title="Login"></div>
-      <div id="cart-icon" class="cart-icon"></div><!-- Ícone de carrinho -->
+      <div
+            class="login-icon"
+            title="Login"
+            aria-label="Login"
+            role="button"
+            data-tooltip="Login"
+          ></div>
+          <div
+            id="cart-icon"
+            class="cart-icon"
+            title="Carrinho"
+            aria-label="Carrinho"
+            role="button"
+            data-tooltip="Carrinho"
+          ></div>
 
       <nav>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Produtos</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Promoção</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Parceiros/Parceiros.html">Parceiros</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Suporte/Suporte.html">Suporte</a>
-        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Sobre%20N%C3%B3s/SobreN%C3%B3s.html">Sobre Nós</a>
-    </nav>
+        <a href="http://127.0.0.1:5500/Produtos/Produtos.html">Produtos</a>
+        <a href="http://127.0.0.1:5500/Produtos/Produtos.html">Promoção</a>
+        <a href="http://127.0.0.1:5500/Parceiros/Parceiros.html">Parceiros</a>
+        <a href="http://127.0.0.1:5500/Suporte/Suporte.html">Suporte</a>
+        <a href="http://127.0.0.1:5500/Sobre%20N%C3%B3s/SobreN%C3%B3s.html"
+          >Sobre Nós</a
+        >
+      </nav>
   </header>
 
     <main>
