--- a/assets/detalhe do produto/detalhe.html
+++ b/assets/detalhe do produto/detalhe.html
@@ -25,11 +25,11 @@
       </div>
 
       <nav>
-        <a href="/produtos/produtos.html">Produtos</a>
-        <a href="/produtos/produtos.html">Promoção</a>
-        <a href="/Parceiros/Parceiros.html">Parceiros</a>
-        <a href="/Suporte/Suporte.html">Suporte</a>
-        <a href="/Sobre Nós/SobreNós.html">Sobre Nós</a>
+         <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Produtos</a>
+        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/produtos/produtos.html">Promoção</a>
+        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Parceiros/Parceiros.html">Parceiros</a>
+        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Suporte/Suporte.html">Suporte</a>
+        <a href="http://127.0.0.1:5500/EletroCenter(atualizado)/Sobre%20N%C3%B3s/SobreN%C3%B3s.html">Sobre Nós</a>
       </nav>
 
       <div class="icon-container">
